--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@angular/platform-browser-dynamic": "~12.1.1",
         "@angular/router": "~12.1.1",
         "@asymmetrik/ngx-leaflet": "^8.1.0",
+        "@capacitor-community/sqlite": "^3.2.3-1",
         "@capacitor/android": "3.2.4",
         "@capacitor/app": "1.0.3",
+        "@capacitor/camera": "^1.1.0",
         "@capacitor/core": "^3.2.3",
         "@capacitor/geolocation": "^1.1.0",
         "@capacitor/haptics": "1.0.3",
@@ -29,11 +31,18 @@
         "@capacitor/network": "^1.0.3",
         "@capacitor/status-bar": "1.0.3",
         "@capacitor/toast": "^1.0.3",
+        "@ionic-native/camera": "^5.36.0",
+        "@ionic-native/core": "^5.36.0",
+        "@ionic-native/sqlite": "^5.36.0",
+        "@ionic-native/sqlite-porter": "^5.36.0",
         "@ionic/angular": "^5.5.2",
         "@types/google-maps": "^3.2.3",
+        "cordova-plugin-camera": "^6.0.0",
+        "cordova-sqlite-storage": "^6.0.0",
         "leaflet": "^1.7.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.2.0",
+        "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
